--- a/01/01.html
+++ b/01/01.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <title>K-digital 3기 이예진</title>
 </head>
 
 <body>
-    <form method="get" action="a.html">
 
         <!--fieldset : 여러개를 그룹화 하는것-->
         <!-- <fieldset>
