--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>K-digital 3기 이예진</title>
 </head>
 <body>
-    <a href = "01/01.html">[23.04.10] Form 테그</a>
+    <a href = "./01/01.html">[23.04.10] Form 테그</a>
+    <a href = "./02/02.html">[23.04.10] Pico Css Form 테그</a>
+    <a href = "./03/03.html">[23.04.10] Pico Css Form 테그</a>
+    <a href = "./03/03.js">[23.04.10] Pico Css Form 테그</a>
     
 </body>
 </html>
