--- a/03/03.html
+++ b/03/03.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--디바이스 크기에 맞추어서 사용하겠다.-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+    
 
-    <!-- 외부스크립트 가져오기 -->
-    <!-- <script src="./03.js"></script> -->
+    외부스크립트 가져오기
+    <!-- <script src="./03.js"></script>
 
     <title>K-digital 3기 JS</title>
     <!-- <script>
@@ -29,9 +30,10 @@
             </header>
             <h2 id="h2Id" class="h2class"></h2>
             <footer>
-                <form>
-                    <button onclick="show();">눌러주세요.</button> <!--버튼누르면 경고창 나타남-->
-                </form>
+                <!-- <form action = "a.html"> --> <!--form으로 묶으면 무조건 동작하고 다시 페이지로드함.-->
+                    <!--action이 생략되어있을때는 동작 후 페이지 재 로딩함-->
+                    <button onclick="show();">눌러주세요.</button> <!--버튼누르면 경고창 나타남(전통적인 방식)-->
+                <!-- </form> -->
             </footer>
         </article>
     </main>
