--- a/03/03.html
+++ b/03/03.html
@@ -9,7 +9,7 @@
     
 
     외부스크립트 가져오기
-    <!-- <script src="./03.js"></script>
+    <script src="./03.js"></script>
 
     <title>K-digital 3기 JS</title>
     <!-- <script>
