--- a/03/03.html
+++ b/03/03.html
@@ -27,13 +27,14 @@
         <article>
             <header>
                 <h1>자바스크립트</h1>
+                <div id = "hdiv"></div>
             </header>
             <h2 id="h2Id" class="h2class"></h2>
             <footer>
-                <!-- <form action = "a.html"> --> <!--form으로 묶으면 무조건 동작하고 다시 페이지로드함.-->
+                <form> <!--form으로 묶으면 무조건 동작하고 다시 페이지로드함.-->
                     <!--action이 생략되어있을때는 동작 후 페이지 재 로딩함-->
                     <button onclick="show();">눌러주세요.</button> <!--버튼누르면 경고창 나타남(전통적인 방식)-->
-                <!-- </form> -->
+                </form>
             </footer>
         </article>
     </main>
