--- a/03/03.html
+++ b/03/03.html
@@ -47,7 +47,7 @@
     </script> -->
 
     <!-- 외부스크립트 가져오기 -->
-    <script src="./03.js"></script>
+    <!-- <script src="./03.js"></script> -->
 </body>
 
 </html>
