--- a/03/03.html
+++ b/03/03.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--디바이스 크기에 맞추어서 사용하겠다.-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
+
+    <link rel="stylesheet" href = "../Style/03.css">
     
 
     외부스크립트 가져오기
