--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <a href = "./02/02.html">[23.04.10] Pico Css Form 테그</a>
     <a href = "./03/03.html">[23.04.10] Pico Css Form 테그</a>
     <a href = "./03/03.js">[23.04.10] Pico Css Form 테그</a>
+    <a href = "./03/03_1.js">[23.04.11] java script 사용 법</a>
+    <a href = "./03/03@.js">[23.04.12] 반복문 사용 이미지 출력</a>
     
 </body>
 </html>
