--- a/04/04.html
+++ b/04/04.html
@@ -24,6 +24,7 @@
             </header>
 
             <h2 id="h2Id" class="h2class"></h2>
+            <h3 id="h3Id" class="h3class"></h3>
             <footer>
                 <form>
 
@@ -62,9 +63,9 @@
 
                     <div class="grid">
                         <button onclick="show();">확인</button>
-                        <button type="reset;">확인</button>
+                        <button type="reset;">리셋</button>
                     </div>
-                    
+
                 </form>
             </footer>
         </article>
