--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>K-digital 3기 이예진</title>
 </head>
+
 <body>
-    <a href = "./01/01.html">[23.04.10] Form 테그</a>
-    <a href = "./02/02.html">[23.04.10] Pico Css Form 테그</a>
-    <a href = "./03/03.html">[23.04.10] Pico Css Form 테그</a>
-    <a href = "./03/03.js">[23.04.10] Pico Css Form 테그</a>
-    <a href = "./03/03_1.js">[23.04.11] java script 사용 법(반복문 사용 이미지 출력)</a>
-    <a href = "./03/032.js">[23.04.12] DOM 제어 </a>
-    
+    <ul>
+        <li><a href="./01/01.html">[23.04.10] Form 테그</a></li>
+        <li><a href="./02/02.html">[23.04.10] Pico Css Form 테그</a></li>
+        <li><a href="./03/03.html">[23.04.10] Pico Css Form 테그</a></li>
+        <li><a href="./03/03.js">[23.04.10] Pico Css Form 테그</a></li>
+        <li><a href="./03/03_1.js">[23.04.11] java script 사용 법(반복문 사용 이미지 출력)</a></li>
+        <li><a href="./03/032.js">[23.04.12] DOM 제어 </a></li>
+        <li><a href="./03/04.html">[23.04.13] 랜덤수 지정 및 출력 </a></li>
+    </ul>
+
 </body>
+
 </html>
