--- a/05/05.html
+++ b/05/05.html
@@ -15,7 +15,10 @@
 
 <article>
     <header>
-        <h1>문자열다루기</h1>
+        <hgroup>
+            <h1>문자열다루기</h1>
+            <h2></h2>
+        </hgroup>
     </header>
 </article>
 
@@ -23,12 +26,12 @@
     <main class="container">
         <form>
             <div class="grid">
-                <input type="text" id="t1" name="t1"  placeholder="단어를 입력하라.">
+                <input type="text" id="t1" name="t1" placeholder="단어를 입력하라.">
                 <input type="text" id="t2" name="t2" readonly>
             </div>
             <div class="grid">
-                <button id = "bt1" class = "bt">화문확인</button> <!--form으로 묶어야지 reset, sybmit사용 가능-->
-                <button id = "bt2" class = "bt">숫자합계</button>
+                <button id="bt1" class="bt">화문확인</button> <!--form으로 묶어야지 reset, sybmit사용 가능-->
+                <button id="bt2" class="bt">숫자합계</button>
                 <button type="reset">취소</button>
             </div>
         </form>
