--- a/05/05.html
+++ b/05/05.html
@@ -27,7 +27,7 @@
         <form>
             <div class="grid">
                 <input type="text" id="t1" name="t1" placeholder="단어를 입력하라.">
-                <input type="text" id="t2" name="t2" readonly>
+                <input type="text" id="t2" name="t2" placeholder="뭐가 나올까나~?" readonly>
             </div>
             <div class="grid">
                 <button id="bt1" class="bt">화문확인</button> <!--form으로 묶어야지 reset, sybmit사용 가능-->
