--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li><a href="./04/04.html">[23.04.12] (주사위게임)랜덤수 지정 및 출력(+정답) </a></li>
         <li><a href="./04/04_2.html">[23.04.12] 온도변환 </a></li>
         <li><a href="./05/05.html">[23.04.13] 문자열 다루기 </a></li>
+        <li><a href = "./05/05_1.html">[23.04.14] 배열 다루기 </a></li>
     </ol>
 
 </body>
