--- a/05/05_1.html
+++ b/05/05_1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
 
     <script src="./05_1.js"></script>
+    <link rel="stylesheet" type="text/css" href="./05_1.css">
 
     <title>문자열 다루기</title>
 
@@ -32,22 +33,22 @@
                 <button class="bt1">사케</button> 
                 <button class="bt1">칵테일</button>
                 <button class="bt1">맥주</button>
-                <button class="bt1">양주</button>
+                <button class="bt1">위스키</button>
             </div> 
             <div class="grid">
                 <button class="bt2">사케 삭제</button> 
                 <button class="bt2">칵테일 삭제 </button>
                 <button class="bt2">맥주 삭제</button>
-                <button class="bt2">양주 삭제</button>
+                <button class="bt2">위스키 삭제</button>
             </div> 
             <div class="grid">
                 <button class="bt3">사케 → 우유</button>
                 <button class="bt3">칵테일 → 사과주스</button>
                 <button class="bt3">맥주 → 커피</button>
-                <button class="bt3">양주 → 콜라</button>
+                <button class="bt3">위스키 → 콜라</button>
             </div> 
             <div class="grid">
-                <button id="btreset">취소</button>
+                <button id="btReset">ReStart!</button>
             </div>
         </form>
     </main>
