--- a/05/05_1.html
+++ b/05/05_1.html
@@ -48,7 +48,7 @@
                 <button class="bt3">위스키 → 콜라</button>
             </div> 
             <div class="grid">
-                <button id="btReset">ReStart!</button>
+                <button id="btReset" class="btR">ReStart!</button>
             </div>
         </form>
     </main>
