--- a/05/05_1.html
+++ b/05/05_1.html
@@ -27,7 +27,7 @@
     <main class="container">
         <form>
             <div class="grid">
-                <input type="text" id="t1" name="t1" placeholder="술이 한잔 생각 나는 밤~ 같이 있는 것 같지만 존재하지 않지...." readonly>
+                <input type="text" id="t1" class="tt" name="t1" placeholder="술이 한잔 생각 나는 밤~ 같이 있는 것 같지만 존재하지 않지...." readonly> 
             </div>
             <div class="grid">
                 <button class="bt1">사케</button> 
