--- a/05/05_2.html
+++ b/05/05_2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
-    <script src="./05_1.js"></script>
+    <script src="./05_2_1.js"></script>
     <link rel="stylesheet" type="text/css" href="./05_2.css">
 
     <title>폭탄 게임</title>
@@ -26,34 +26,34 @@
     <main class="container">
         <form>
             <div class="gird1">
-                <div class="bt1">
+                <div class="bt1" id = "box1">
                 </div>
-                <div class="bt1">
+                <div class="bt1" id = "box2">
                 </div>
-                <div class="bt1">
-                </div>
-            </div>
-
-            <div class="gird1">
-                <div class="bt1">
-                </div>
-                <div class="bt1">
-                </div>
-                <div class="bt1">
+                <div class="bt1" id = "box3">
                 </div>
             </div>
 
             <div class="gird1">
-                <div class="bt1">
+                <div class="bt1" id = "box4">
                 </div>
-                <div class="bt1">
+                <div class="bt1" id = "box5">
                 </div>
-                <div class="bt1">
+                <div class="bt1" id = "box6">
+                </div>
+            </div>
+
+            <div class="gird1">
+                <div class="bt1" id = "box7">
+                </div>
+                <div class="bt1" id = "box8">
+                </div>
+                <div class="bt1" id = "box9">
                 </div>
             </div>
 
             <div class="gridr">
-                <button id="btReset" class="btR">믹스믹스폭탄탄탄!</button>
+                <button type="button" id="btReset" class="btR">믹스믹스폭탄탄탄!</button>
             </div>
         </form>
     </main>
