--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li><a href="./04/04_2.html">[23.04.12] 온도변환 </a></li>
         <li><a href="./05/05.html">[23.04.13] 문자열 다루기 </a></li>
         <li><a href = "./05/05_1.html">[23.04.14] 배열 다루기 </a></li>
+        <li><a href = "./05/05_2.html">[23.04.18] 폭탄게임 </a></li>
     </ol>
 
 </body>
