--- a/05/05_2.html
+++ b/05/05_2.html
@@ -18,6 +18,7 @@
         <hgroup>
             <h1>폭탄 게임</h1>
             <h2></h2>
+            <h3>'믹스믹스폭탄탄탄'을 누르면 게임 시작~~!</h3>
         </hgroup>
     </header>
 </article>
