--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li><a href="./05/05.html">[23.04.13] 문자열 다루기 </a></li>
         <li><a href = "./05/05_1.html">[23.04.14] 배열 다루기 </a></li>
         <li><a href = "./05/05_2.html">[23.04.18] 폭탄게임 </a></li>
+        <li><a href = "./06/06.html">[23.04.20] 영화리스트업 </a></li>
     </ol>
 
 </body>
